--- a/gameshop.html
+++ b/gameshop.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Games Shop- A sua loja de games</h1>
+            <h1>Games Shop</h1>
             <nav>
                 <ul>
                     <li><a href="#">Sobre a loja</a></li>
