--- a/gameshop.html
+++ b/gameshop.html
@@ -18,5 +18,20 @@
             </nav>
         </div>
     </header>
+    <section>
+        <div class="container">
+            <img src="images/loja.jpg" alt="fachada">
+            <div>
+                <h2>Sobre a loja</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium libero nesciunt nostrum, non quibusdam officiis est voluptatum quae. Voluptate voluptatem corporis tempore quisquam distinctio deleniti quo quaerat, saepe itaque! Dicta!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt consequuntur dolor natus sequi tempore officiis adipisci similique fuga quis rem nobis numquam expedita dolorem nisi, doloremque, fugit, quibusdam porro quam.</p>
+                <ul class="brands-list">
+                    <li><img src="images/nintendo.png" alt="Nintendo"></li>
+                    <li><img src="images/xbox.png" alt="xbox"></li>
+                    <li><img src="images/playstation.png" alt="playstation"></li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
