--- a/gameshop.html
+++ b/gameshop.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Shop</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -20,7 +23,7 @@
     </header>
     <section>
         <div class="container">
-            <img src="images/loja.jpg" alt="fachada">
+            <img class="store-front" src="images/loja.jpg" alt="fachada">
             <div>
                 <h2>Sobre a loja</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium libero nesciunt nostrum, non quibusdam officiis est voluptatum quae. Voluptate voluptatem corporis tempore quisquam distinctio deleniti quo quaerat, saepe itaque! Dicta!</p>
