--- a/gameshop.html
+++ b/gameshop.html
@@ -36,5 +36,42 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <h2>Contato</h2>
+            <div>
+                <div>
+                    <h3>Fale conosco</h3>
+                    <form>
+                        <input type="text"  placeholder="Seu Nome">
+                        <input type="email"  placeholder="Seu e-mail">
+                        <input type="tel"  placeholder="Seu telefone">
+                        <textarea placeholder="Sua mensagem"></textarea>
+                        <input type="submit" value="Enviar">
+                    </form>
+                </div>
+                <div>
+                    <h3>Nos acompanhe</h3>
+                    <ul>
+                        <li>
+                            <a href="#" title="Siga-nos no instagram">
+                                <img src="images/instagram.png" alt="instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no Facebook">
+                                <img src="images/facebook.png" alt="Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no Youtube">
+                                <img src="images/youtube.png" alt="Youtube">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
