update html e css pt3

--- a/gameshop.html
+++ b/gameshop.html
@@ -36,10 +36,10 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="contact">
         <div class="container">
             <h2>Contato</h2>
-            <div>
+            <div class="contact-methods">
                 <div>
                     <h3>Fale conosco</h3>
                     <form>
@@ -52,7 +52,7 @@
                 </div>
                 <div>
                     <h3>Nos acompanhe</h3>
-                    <ul>
+                    <ul class="social-links">
                         <li>
                             <a href="#" title="Siga-nos no instagram">
                                 <img src="images/instagram.png" alt="instagram">
@@ -64,11 +64,15 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" title="Siga-nos no Youtube">
+                            <a href="#" title="Visite nosso canal no youtube">
                                 <img src="images/youtube.png" alt="Youtube">
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div>
+                    <h3>Venha até nós</h3>
+                    <p>Rua JavaScript n°124, Vila HTML- São Paulo- SP</p>
                 </div>
             </div>
         </div>
