--- a/gameshop.html
+++ b/gameshop.html
@@ -43,11 +43,11 @@
                 <div>
                     <h3>Fale conosco</h3>
                     <form>
-                        <input type="text"  placeholder="Seu Nome">
-                        <input type="email"  placeholder="Seu e-mail">
-                        <input type="tel"  placeholder="Seu telefone">
+                        <input type="text"  placeholder="Seu Nome" required>
+                        <input type="email"  placeholder="Seu e-mail" required>
+                        <input type="tel"  placeholder="Seu telefone(opcional)">
                         <textarea placeholder="Sua mensagem"></textarea>
-                        <input type="submit" value="Enviar">
+                        <input id="bottom" type="submit" value="Enviar">
                     </form>
                 </div>
                 <div>
@@ -77,5 +77,12 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>
+                &copy; Games Shop - Todos os direitos reservados - 2024
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
