--- a/gameshop.html
+++ b/gameshop.html
@@ -15,13 +15,13 @@
             <h1>Games Shop</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Sobre a loja</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#about">Sobre a loja</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <section>
+    <section id="about">
         <div class="container">
             <img class="store-front" src="images/loja.jpg" alt="fachada">
             <div>
